--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-native-reanimated": "^3.8.1",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.30.1",
+    "react-native-toast-message": "^2.2.0",
     "react-native-ui-lib": "^7.19.0",
     "react-native-vector-icons": "^10.0.3",
     "react-native-web": "~0.19.6"
