--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
     "react-native-gifted-chat": "^2.4.0",
     "react-native-paper": "^5.12.3",
     "react-native-reanimated": "^3.8.1",
-    "react-native-safe-area-context": "^4.9.0",
-    "react-native-screens": "^3.30.1",
+    "react-native-safe-area-context": "4.8.2",
+    "react-native-screens": "~3.29.0",
     "react-native-scrollable-tab-view": "^1.0.0",
     "react-native-tab-view": "^3.5.2",
     "react-native-toast-message": "^2.2.0",
